Revert "整改一下结构"
This reverts commit 877eb786fa97710c2f226b31844b4369dd5175ec.

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<title>API</title>
+<title>Demo</title>
 <link rel="stylesheet" type="text/css" href="../themes/gray/easyui.css">
 <script type="text/javascript" src="../jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="../jquery.easyui.min.js"></script>
@@ -200,26 +200,29 @@ $(function() {
 </head>
 <body class="easyui-layout">
 	<div region="north" border="true" class="cs-north">
-		<div class="cs-north-bg"><div class="cs-north-logo">jQuery EasyUI 1.2.6 API</div></div>
+		<div class="cs-north-bg"><div class="cs-north-logo">jQuery EasyUI 1.2.6 Demo</div></div>
 	</div>
 	<div region="west" border="true" split="true" title="Navigation" class="cs-west">
 		<div class="easyui-accordion" fit="true" border="false">
-				<div title="Base" selected="true">
-					<a href="javascript:void(0);" src="documentation.html" class="cs-navi-tab">documentation</a></p>
-					<a href="javascript:void(0);" src="parser.html" class="cs-navi-tab">parser</a></p>
+				<div title="Base">
 					<a href="javascript:void(0);" src="easyloader.html" class="cs-navi-tab">easyloader</a></p>
 					<a href="javascript:void(0);" src="draggable.html" class="cs-navi-tab">draggable</a></p>
 					<a href="javascript:void(0);" src="droppable.html" class="cs-navi-tab">droppable</a></p>
+					<a href="javascript:void(0);" src="droppable1.html" class="cs-navi-tab">droppable1</a></p>
+					<a href="javascript:void(0);" src="droppable2.html" class="cs-navi-tab">droppable2</a></p>
 					<a href="javascript:void(0);" src="resizable.html" class="cs-navi-tab">resizable</a></p>
 					<a href="javascript:void(0);" src="pagination.html" class="cs-navi-tab">pagination</a></p>
 					<a href="javascript:void(0);" src="searchbox.html" class="cs-navi-tab">searchbox</a></p>
 					<a href="javascript:void(0);" src="progressbar.html" class="cs-navi-tab">progressbar</a></p>
 				</div>
 				<div title="Layout">
-					<a href="javascript:void(0);" src="panel.html" class="cs-navi-tab">panel</a></p>
-					<a href="javascript:void(0);" src="tabs.html" class="cs-navi-tab">tabs</a></p>
 					<a href="javascript:void(0);" src="accordion.html" class="cs-navi-tab">accordion</a></p>
 					<a href="javascript:void(0);" src="layout.html" class="cs-navi-tab">layout</a></p>
+					<a href="javascript:void(0);" src="layout1.html" class="cs-navi-tab">layout1</a></p>
+					<a href="javascript:void(0);" src="layout2.html" class="cs-navi-tab">layout2</a></p>
+					<a href="javascript:void(0);" src="panel.html" class="cs-navi-tab">panel</a></p>
+					<a href="javascript:void(0);" src="panel2.html" class="cs-navi-tab">panel1</a></p>
+					<a href="javascript:void(0);" src="tabs.html" class="cs-navi-tab">tabs</a></p>
 				</div>
 				<div title="Menu and Button">
 					<a href="javascript:void(0);" src="menu.html" class="cs-navi-tab">menu</a></p>
@@ -235,10 +238,10 @@ $(function() {
 					<a href="javascript:void(0);" src="combotree.html" class="cs-navi-tab">combotree</a></p>
 					<a href="javascript:void(0);" src="combogrid.html" class="cs-navi-tab">combogrid</a></p>
 					<a href="javascript:void(0);" src="numberbox.html" class="cs-navi-tab">numberbox</a></p>
+					<a href="javascript:void(0);" src="numberbox2.html" class="cs-navi-tab">numberbox1</a></p>
 					<a href="javascript:void(0);" src="datebox.html" class="cs-navi-tab">datebox</a></p>
 					<a href="javascript:void(0);" src="datetimebox.html" class="cs-navi-tab">datetimebox</a></p>
 					<a href="javascript:void(0);" src="calendar.html" class="cs-navi-tab">calendar</a></p>
-					<a href="javascript:void(0);" src="spinner.html" class="cs-navi-tab">spinner</a></p>
 					<a href="javascript:void(0);" src="timespinner.html" class="cs-navi-tab">timespinner</a></p>
 					<a href="javascript:void(0);" src="numberspinner.html" class="cs-navi-tab">numberspinner</a></p>
 					<a href="javascript:void(0);" src="slider.html" class="cs-navi-tab">slider</a></p>
@@ -252,7 +255,10 @@ $(function() {
 					<a href="javascript:void(0);" src="datagrid.html" class="cs-navi-tab">datagrid</a></p>
 					<a href="javascript:void(0);" src="propertygrid.html" class="cs-navi-tab">propertygrid</a></p>
 					<a href="javascript:void(0);" src="tree.html" class="cs-navi-tab">tree</a></p>
+					<a href="javascript:void(0);" src="tree2.html" class="cs-navi-tab">tree1</a></p>
 					<a href="javascript:void(0);" src="treegrid.html" class="cs-navi-tab">treegrid</a></p>
+					<a href="javascript:void(0);" src="treegrid2.html" class="cs-navi-tab">treegrid1</a></p>
+					<a href="javascript:void(0);" src="treegrid3.html" class="cs-navi-tab">treegrid2</a></p>
 				</div>
 		</div>
 	</div>
@@ -260,10 +266,10 @@ $(function() {
 		 <div id="tabs" class="easyui-tabs"  fit="true" border="false" >
                 <div title="Home">
 				<div class="cs-home-remark">
-					<h1>jQuery EasyUI 1.2.6 API</h1> <br>
+					<h1>jQuery EasyUI 1.2.6 Demo</h1> <br>
 					制作：purediy <br>
 					博客：<a href="http://www.cnblogs.com/purediy" target="_blank">http://www.cnblogs.com/purediy</a><br>
-					说明：jQuery EasyUI 1.2.6 API离线文档，与官网API文档一致。
+					说明：jQuery EasyUI 1.2.6 Demo分类整理。
 				</div>
 				</div>
         </div>
